--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # This repository is maintained by
 
-* @dassencio @davelosert @malantin @martedesco @Maximisch
+* @dassencio @davelosert @malantin @martedesco @maximisch
