--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   dev:
-    image: ghcr.io/octodemo/development-containers/javascript-nodejs-22:base-202408-r2
+    image: mcr.microsoft.com/devcontainers/javascript-node:dev-22-bookworm
     command: sleep infinity
     network_mode: host
 
