--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@primer/react": "37.31.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-query": "3.39.3",
+    "@tanstack/react-query": "^5.85.9",
     "react-router-dom": "7.8.2",
     "styled-components": "5.3.11"
   },
