--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rocketdex-frontend",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,33 +13,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@primer/octicons-react": "17.9.0",
-    "@primer/react": "35.15.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "3.39.2",
-    "react-router-dom": "6.4.4",
-    "styled-components": "5.3.6"
+    "@primer/octicons-react": "19.16.0",
+    "@primer/react": "37.31.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@tanstack/react-query": "5.85.9",
+    "react-router-dom": "7.8.2",
+    "styled-components": "5.3.11"
   },
   "devDependencies": {
-    "@testing-library/cypress": "8.0.7",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.45.1",
-    "@typescript-eslint/parser": "5.45.1",
-    "@vitejs/plugin-react": "2.2.0",
-    "@vitest/coverage-c8": "0.25.5",
-    "c8": "7.12.0",
-    "eslint": "8.29.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-primer-react": "1.0.1",
-    "jsdom": "20.0.3",
-    "prettier": "2.8.0",
-    "typescript": "4.9.3",
-    "vite": "3.2.5",
-    "vitest": "0.25.5"
+    "@testing-library/cypress": "10.0.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
+    "@types/styled-components": "5.1.34",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
+    "@vitejs/plugin-react": "5.0.2",
+    "@vitest/coverage-v8": "3.2.4",
+    "eslint": "9.34.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-primer-react": "8.1.0",
+    "globals": "^16.3.0",
+    "jsdom": "26.1.0",
+    "prettier": "3.6.2",
+    "typescript": "5.9.2",
+    "vite": "7.1.4",
+    "vitest": "3.2.4"
   }
 }
